# Dependency-Exposure-Risk-Scanner-DERS-

./: README.md
ders/: pyproject.toml  requirements.txt
ders/data/: vulndb.json
ders/examples/: requirements.txt
ders/src_ders/: cli.py  dependency_graph.py  loader.py  osv_client.py  report.py  scanner.py  semver.py
